updated image segmention notebook to include vi calculations and plotting figures

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -141,32 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed cam3_nir.csv\n",
-      "Processed cam4_rgb.csv\n",
-      "Processed cam5_rgb.csv\n",
-      "Processed cam2_nir.csv\n",
-      "Processed cam7_rgb.csv\n",
-      "Processed cam1_nir.csv\n",
-      "Processed cam8_nir.csv\n",
-      "Processed cam6_rgb.csv\n",
-      "Processed cam3_rgb.csv\n",
-      "Processed cam4_nir.csv\n",
-      "Processed cam5_nir.csv\n",
-      "Processed cam2_rgb.csv\n",
-      "Processed cam7_nir.csv\n",
-      "Processed cam1_rgb.csv\n",
-      "Processed cam8_rgb.csv\n",
-      "Processed cam6_nir.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -210,41 +187,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Define the naming conventions and range\n",
-    "prefixes = [f'cam{i}' for i in range(1, 9)]\n",
-    "suffixes = ['_nir.csv', '_rgb.csv']\n",
+    "# Go through each camera and plot the Center_X and Center_Y values\n",
+    "output_folder = '../assets'\n",
     "\n",
-    "# Define the directory path\n",
-    "output_path = '../assets'\n",
-    "\n",
-    "# Get list of CSV files in the directory\n",
-    "all_files = os.listdir(output_path)\n",
-    "csv_files = [f for f in all_files if any(f.startswith(prefix) and f.endswith(suffix) for prefix in prefixes for suffix in suffixes)]\n",
-    "\n",
-    "# Process each CSV file\n",
-    "for csv_file in csv_files:\n",
-    "    # Read the CSV file\n",
-    "    file_path = os.path.join(output_path, csv_file)\n",
-    "    df = pd.read_csv(file_path)\n",
+    "for i in range(1, 9):\n",
+    "    # Plot for cam{i}_nir.csv\n",
+    "    nir_df = pd.read_csv(f'../model_output/cam{i}_nir.csv')\n",
     "    \n",
-    "    # Remove rows with NaN in Center_X or Center_Y, and Center_X values greater than 640\n",
-    "    df = df.dropna(subset=['Center_X', 'Center_Y'])\n",
-    "    df = df[df['Center_X'] < 640]\n",
+    "    plt.figure(figsize=(10, 7))\n",
+    "    plt.scatter(nir_df['Center_X'], nir_df['Center_Y'], c='r', marker='o')\n",
+    "    plt.title(f'Camera {i} NIR Center_X and Center_Y values')\n",
+    "    plt.xlabel('Center_X')\n",
+    "    plt.ylabel('Center_Y')\n",
+    "    plt.grid(True)\n",
+    "    plt.savefig(f'{output_folder}/cam{i}_nir_center_x_y.png')\n",
+    "    plt.close()\n",
     "    \n",
-    "    # Sort by Filename\n",
-    "    df = df.sort_values(by='Filename')\n",
+    "    # Plot for cam{i}_rgb.csv\n",
+    "    rgb_df = pd.read_csv(f'../model_output/cam{i}_rgb.csv')\n",
     "    \n",
-    "    # Reduce the number of rows to half\n",
-    "    half_length = len(df) // 2\n",
-    "    df = df.iloc[:half_length]\n",
-    "    \n",
-    "    # Save the cleaned and sorted dataframe back to the CSV file\n",
-    "    df.to_csv(file_path, index=False)\n",
-    "    \n",
-    "    print(f\"Processed {csv_file}\")\n"
+    "    plt.figure(figsize=(10, 7))\n",
+    "    plt.scatter(rgb_df['Center_X'], rgb_df['Center_Y'], c='b', marker='o')\n",
+    "    plt.title(f'Camera {i} RGB Center_X and Center_Y values')\n",
+    "    plt.xlabel('Center_X')\n",
+    "    plt.ylabel('Center_Y')\n",
+    "    plt.grid(True)\n",
+    "    plt.savefig(f'{output_folder}/cam{i}_rgb_center_x_y.png')\n",
+    "    plt.close()"
    ]
   },
   {
@@ -339,6 +311,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def vi(img, nir_x_center, nir_y_center, rgb_x_center, rgb_y_center):\n",
+    "    # Split the image into NIR and RGB\n",
+    "    nir = img[:, :640, :].astype(np.float64)\n",
+    "    rgb = img[:, 641:1280, :].astype(np.float64)\n",
+    "    \n",
+    "    # Extract a 5x5 region around the RGB center coordinates\n",
+    "    rgb_gray = img[rgb_y_center - 5:rgb_y_center + 5, rgb_x_center - 5:rgb_x_center + 5, :]\n",
+    "    \n",
+    "    # Extract the red, green, and blue bands from the gray region\n",
+    "    rgb_gray_red, rgb_gray_green, rgb_gray_blue = rgb_gray[:, :, 2], rgb_gray[:, :, 1], rgb_gray[:, :, 0]\n",
+    "    rgb_gray_red_avg, rgb_gray_green_avg, rgb_gray_blue_avg = np.mean(rgb_gray_red), np.mean(rgb_gray_green), np.mean(rgb_gray_blue)\n",
+    "    \n",
+    "    # Convert the RGB image to red, green, blue bands\n",
+    "    red, green, blue = rgb[:, :, 2], rgb[:, :, 1], rgb[:, :, 0]\n",
+    "    rgb_red_ref, rgb_green_ref, rgb_blue_ref = (red / rgb_gray_red_avg), (green / rgb_gray_green_avg), (blue / rgb_gray_blue_avg)\n",
+    "    \n",
+    "    # Calculate the SCI (Soil Color Index)\n",
+    "    sci = (rgb_red_ref - rgb_green_ref) / (rgb_red_ref + rgb_green_ref)\n",
+    "    \n",
+    "    # Plot the SCI image\n",
+    "    plt.figure()\n",
+    "    plt.imshow(sci, cmap='gray')\n",
+    "    plt.title('Soil Color Index (SCI)')\n",
+    "    plt.colorbar()\n",
+    "    # plt.savefig('../assets/vi/sci.png')\n",
+    "    \n",
+    "    # Histogram of SCI\n",
+    "    plt.figure()\n",
+    "    plt.hist(sci.ravel(), bins=256, range=(-1.0, 1.0), fc='k', ec='k')\n",
+    "    plt.title('Soil Color Index (SCI) Histogram')\n",
+    "    # plt.savefig('../assets/vi/sci_hist.png')\n",
+    "    \n",
+    "    # Use the NIR image to calculate the GNDVI (Green Normalized Difference Vegetation Index)\n",
+    "    \n",
+    "    # Extract a 5x5 region around the NIR center coordinates\n",
+    "    nir_gray = img[nir_y_center - 5:nir_y_center + 5, nir_x_center - 5:nir_x_center + 5, :]\n",
+    "    \n",
+    "    # Extract the red, green, and blue bands from the gray region\n",
+    "    nir_gray_red, nir_gray_green, nir_gray_blue = nir_gray[:, :, 2], nir_gray[:, :, 1], nir_gray[:, :, 0]\n",
+    "    nir_gray_red_avg, nir_gray_green_avg, nir_gray_blue_avg = np.mean(nir_gray_red), np.mean(nir_gray_green), np.mean(nir_gray_blue)\n",
+    "    \n",
+    "    # Convert the NIR image to red, green, blue bands\n",
+    "    nir_red, nir_green, nir_blue = nir[:, :, 2], nir[:, :, 1], nir[:, :, 0]\n",
+    "    nir_red_ref, nir_green_ref, nir_blue_ref = (nir_red / nir_gray_red_avg), (nir_green / nir_gray_green_avg), (nir_blue / nir_gray_blue_avg)\n",
+    "    \n",
+    "    # Calculate the GNDVI\n",
+    "    gndvi = (nir_red_ref - nir_green_ref) / (nir_red_ref + nir_green_ref)\n",
+    "    \n",
+    "    # Plot the GNDVI image\n",
+    "    plt.figure()\n",
+    "    plt.imshow(gndvi, cmap='gray')\n",
+    "    plt.title('Green Normalized Difference Vegetation Index (GNDVI)')\n",
+    "    plt.colorbar()\n",
+    "    # plt.savefig('../assets/vi/gndvi.png')\n",
+    "    \n",
+    "    # Histogram of GNDVI\n",
+    "    plt.figure()\n",
+    "    plt.hist(gndvi.ravel(), bins=256, range=(-1.0, 1.0), fc='k', ec='k')\n",
+    "    plt.title('Green Normalized Difference Vegetation Index (GNDVI) Histogram')\n",
+    "    # plt.savefig('../assets/vi/gndvi_hist.png')\n",
+    "    \n",
+    "    return sci, gndvi\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to see if it works, try it on this image!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the image\n",
+    "img = cv2.imread('../data/cam1/date_1-5-2024_10.0.11_1.png')\n",
+    "\n",
+    "# Call the function\n",
+    "vi(img, 279, 243, 919, 209)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Delete Later**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "import numpy as np\n",
     "import cv2\n",
@@ -394,38 +467,6 @@
     "\n",
     "# Run the function\n",
     "process_ndvi()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "def save_ndvi_images():\n",
-    "    selected_folder = '../assets/ndvi_selected/'\n",
-    "    \n",
-    "    # Create the selected images folder if it doesn't exist\n",
-    "    if not os.path.exists(selected_folder):\n",
-    "        os.makedirs(selected_folder)\n",
-    "    \n",
-    "    for i in range(1, 10):\n",
-    "        ndvi_folder = f'../assets/cam{i}_ndvi'\n",
-    "        \n",
-    "        if os.path.exists(ndvi_folder):\n",
-    "            ndvi_images = [f for f in os.listdir(ndvi_folder) if f.endswith('.png')]\n",
-    "            \n",
-    "            if ndvi_images:\n",
-    "                random_image = random.choice(ndvi_images)\n",
-    "                src_path = os.path.join(ndvi_folder, random_image)\n",
-    "                dst_path = os.path.join(selected_folder, f'cam{i}_selected.png')\n",
-    "                \n",
-    "                cv2.imwrite(dst_path, cv2.imread(src_path))\n",
-    "\n",
-    "# Select random images from each camera\n",
-    "save_ndvi_images()"
    ]
   }
  ],
