removed redundant dependencies

--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -17,7 +17,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import cv2\n",
+    "from typing import Tuple, Dict"
    ]
   },
   {
@@ -145,9 +147,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
     "# Define the naming conventions and range\n",
     "prefixes = [f'cam{i}' for i in range(1, 9)]\n",
     "suffixes = ['_nir.csv', '_rgb.csv']\n",
@@ -187,9 +186,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Go through each camera and plot the Center_X and Center_Y values\n",
     "output_folder = '../assets'\n",
     "\n",
@@ -225,11 +221,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
     "def calculate_panel_rgb_values(csv_file, image_folder):\n",
     "    # Load the CSV file\n",
     "    data = pd.read_csv(csv_file)\n",
@@ -311,12 +302,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "from PIL import Image\n",
-    "from typing import Tuple, Dict\n",
-    "\n",
     "# Updated calibration data for 8 cameras\n",
     "calibration_data: Dict[str, Dict[str, float]] = {\n",
     "    'cam1': {'Blue': 10.77, 'Red': 12.24, 'Green': 12.57},\n",
