--- a/notebooks/image_segmenation.ipynb
+++ b/notebooks/image_segmenation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "output_folder_ir = '../data/'\n",
     "\n",
     "# Run the functions\n",
-    "# process_rgb_images(input_folder, output_folder_rgb)\n",
+    "process_rgb_images(input_folder, output_folder_rgb)\n",
     "process_nir_images(input_folder, output_folder_ir)"
    ]
   },
@@ -443,7 +443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
